add_library(smartmate_model STATIC
    domain/AppearanceSettings.h
    domain/AppearanceSettings.cpp
    domain/Task.h
    domain/Task.cpp
    domain/TaskCommandAvailability.h
    domain/TaskConstraints.h
    domain/TaskCreationRequest.h
    domain/TaskDependency.h
    domain/TaskDependencyEditContext.h
    domain/TaskGraph.h
    domain/TaskStateMachine.h
    domain/TaskStateMachine.cpp
    domain/TaskTypes.h
    dependencies/TaskDependencyGraph.h
    dependencies/TaskDependencyGraph.cpp
    planner/TaskOrderingPolicy.h
    planner/TaskOrderingPolicy.cpp
    planner/TaskDeadlinePolicy.h
    planner/TaskDeadlinePolicy.cpp
    planner/TaskCommandPolicy.h
    planner/TaskCommandPolicy.cpp
    repositories/RepositoryException.h
    repositories/IAppearanceSettingsRepository.h
    repositories/ITaskBatchTransitionRepository.h
    repositories/ITaskCreationRepository.h
    repositories/ITaskDeletionRepository.h
    repositories/ITaskDependencyRepository.h
    repositories/ITaskRepository.h
    services/TaskService.h
    services/TaskService.cpp
    services/TaskServiceSupport.h
    services/TaskResult.h
    services/TaskDraftValidator.h
    services/TaskDraftValidator.cpp
    services/AppearanceSettingsService.h
    services/AppearanceSettingsService.cpp
)

target_include_directories(smartmate_model
    PUBLIC
        ${CMAKE_CURRENT_SOURCE_DIR}
)

target_link_libraries(smartmate_model
    PUBLIC
        Qt6::Core
)
