add_library(smartmate_model STATIC
    domain/AppearanceSettings.h
    domain/AppearanceSettings.cpp
    domain/Task.h
    domain/Task.cpp
    domain/TaskCategory.h
    domain/TaskCategory.cpp
    domain/TaskCategoryConstraints.h
    domain/TaskCommandAvailability.h
    domain/TaskConstraints.h
    domain/TaskCreationRequest.h
    domain/TaskDependency.h
    domain/TaskDependencyEditContext.h
    domain/TaskGraph.h
    domain/TaskStateMachine.h
    domain/TaskStateMachine.cpp
    domain/TaskTypes.h
    domain/UnicodeText.h
    dependencies/TaskDependencyGraph.h
    dependencies/TaskDependencyGraph.cpp
    planner/TaskOrderingPolicy.h
    planner/TaskOrderingPolicy.cpp
    planner/TaskDeadlinePolicy.h
    planner/TaskDeadlinePolicy.cpp
    planner/TaskCommandPolicy.h
    planner/TaskCommandPolicy.cpp
    repositories/RepositoryException.h
    repositories/IAppearanceSettingsRepository.h
    repositories/ITaskBatchTransitionRepository.h
    repositories/ITaskCreationRepository.h
    repositories/ITaskDeletionRepository.h
    repositories/ITaskDependencyRepository.h
    repositories/ITaskRepository.h
    repositories/ITaskCategoryRepository.h
    services/TaskService.h
    services/TaskService.cpp
    services/TaskServiceQueries.cpp
    services/TaskServiceDependencyCommands.cpp
    services/TaskServiceDraftCommands.cpp
    services/TaskServiceTransitionCommands.cpp
    services/internal/TaskServiceResultSupport.h
    services/internal/TaskServiceResultSupport.cpp
    services/internal/TaskServiceSnapshotSupport.h
    services/internal/TaskServiceSnapshotSupport.cpp
    services/TaskResult.h
    services/TaskCategoryResult.h
    services/TaskCategoryService.h
    services/TaskCategoryService.cpp
    services/TaskDraftValidator.h
    services/TaskDraftValidator.cpp
    services/AppearanceSettingsService.h
    services/AppearanceSettingsService.cpp
)

target_include_directories(smartmate_model
    PUBLIC
        ${CMAKE_CURRENT_SOURCE_DIR}
)

target_link_libraries(smartmate_model
    PUBLIC
        Qt6::Core
)
