add_library(smartmate_model STATIC
    domain/AppearanceSettings.h
    domain/AppearanceSettings.cpp
    domain/DesktopPetSettings.h
    domain/DesktopPetSettings.cpp
    domain/Task.h
    domain/Task.cpp
    domain/TaskActivityEvent.h
    domain/TaskCategory.h
    domain/TaskCategory.cpp
    domain/TaskCategoryConstraints.h
    domain/TaskCommandAvailability.h
    domain/TaskConstraints.h
    domain/TaskCreationRequest.h
    domain/TaskDependency.h
    domain/TaskDependencyEditContext.h
    domain/TaskGraph.h
    domain/TaskStateMachine.h
    domain/TaskStateMachine.cpp
    domain/TaskTypes.h
    domain/UnicodeText.h
    dependencies/TaskDependencyGraph.h
    dependencies/TaskDependencyGraph.cpp
    planner/TaskOrderingPolicy.h
    planner/TaskOrderingPolicy.cpp
    planner/TaskDeadlinePolicy.h
    planner/TaskDeadlinePolicy.cpp
    planner/TaskCommandPolicy.h
    planner/TaskCommandPolicy.cpp
    statistics/StatisticsTypes.h
    repositories/RepositoryException.h
    repositories/IAppearanceSettingsRepository.h
    repositories/IDesktopPetSettingsRepository.h
    repositories/ITaskActivityRepository.h
    repositories/ITaskTransitionRepository.h
    repositories/ITaskCreationRepository.h
    repositories/ITaskDeletionRepository.h
    repositories/ITaskDependencyRepository.h
    repositories/ITaskRepository.h
    repositories/ITaskCategoryRepository.h
    services/TaskService.h
    services/TaskService.cpp
    services/TaskServiceQueries.cpp
    services/TaskServiceDependencyCommands.cpp
    services/TaskServiceDraftCommands.cpp
    services/TaskServiceTransitionCommands.cpp
    services/internal/TaskServiceResultSupport.h
    services/internal/TaskServiceResultSupport.cpp
    services/internal/TaskServiceSnapshotSupport.h
    services/internal/TaskServiceSnapshotSupport.cpp
    services/TaskResult.h
    services/StatisticsService.h
    services/StatisticsService.cpp
    services/TaskCategoryResult.h
    services/TaskCategoryService.h
    services/TaskCategoryService.cpp
    services/TaskDraftValidator.h
    services/TaskDraftValidator.cpp
    services/AppearanceSettingsService.h
    services/AppearanceSettingsService.cpp
    services/DesktopPetSettingsService.h
    services/DesktopPetSettingsService.cpp
)

target_include_directories(smartmate_model
    PUBLIC
        ${CMAKE_CURRENT_SOURCE_DIR}
)

target_link_libraries(smartmate_model
    PUBLIC
        Qt6::Core
)
