add_library(smartmate_viewmodel STATIC
    AppViewModel.h
    AppViewModel.cpp
    AppearanceSettingsViewModel.h
    AppearanceSettingsViewModel.cpp
    TaskEditorViewModel.h
    TaskEditorViewModel.cpp
    TaskDependencyViewModel.h
    TaskDependencyViewModel.cpp
    TaskErrorMapper.h
    TaskErrorMapper.cpp
    TaskPresentationFormatter.h
    TaskPresentationFormatter.cpp
    TaskPlanProjection.h
    TaskPlanProjection.cpp
    TaskProjectionSources.h
    TaskProjectionSources.cpp
    TaskCategoryPresentation.h
    TaskCategoryPresentation.cpp
    TaskCategoryViewModel.h
    TaskCategoryViewModel.cpp
    TaskGraphViewModel.h
    TaskGraphViewModel.cpp
    TaskGraphProjectionModels.h
    TaskGraphProjectionModels.cpp
    TaskGraphLayout.h
    TaskGraphLayout.cpp
    TaskListViewModel.h
    TaskListViewModel.cpp
    TaskFocusViewModel.h
    TaskFocusViewModel.cpp
    TaskDetailsViewModel.h
    TaskDetailsViewModel.cpp
)

target_include_directories(smartmate_viewmodel
    PUBLIC
        ${CMAKE_CURRENT_SOURCE_DIR}
)

target_link_libraries(smartmate_viewmodel
    PUBLIC
        smartmate_viewmodel_contracts
        smartmate_model
        Qt6::Core
)
